# EventBasedSplitter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: main.cpp
include/: ConcreteCameraStream.hpp  ICameraStream.hpp  IConfig.hpp  MockCameraStream.hpp  RawViewer.hpp  Registry.hpp  SubRegionViewer.hpp  ThreadPool.h  streamer.h  util.h
python/: cam.py  main.py  requirements.txt  test.py
src/: ConcreteCameraStream.cpp  ICameraStream.cpp  MockCameraStream.cpp  RawViewer.cpp  Registry.cpp  SubRegionViewer.cpp  ThreadPool.cpp  main.cpp  streamer.cpp  test.cpp  util.cpp
